# mett-dataportal

./: .djlintrc  .dockerignore  .gitignore  .pre-commit-config.yaml  Assemblies-Annotations-Map.csv  README.md  build_react_image.sh  generate-django-secret.sh  manage.py  mett.env  pytest.ini  requirements-dev.txt  requirements.txt
config/: local.env
dataportal_api/: .dockerignore  Dockerfile  PPI_GENE_INTEGRATION.md  demo_nl_query.py  example_ppi_import_with_genes.py  manage.py  mett.env  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pyhmmer_tests.py  run_simple_tests.py  test_nl_query.py
dataportal_api/data-generators/import-scripts/: import-annotations.py  import-species.py
dataportal_api/dataportal/: admin.py  api.py  asgi.py  celery.py  context_processors.py  elasticsearch_client.py  middleware.py  models.py  models_relational.py  router.py  schemas.py  settings.py  tasks.py  urls.py  utils.py  wsgi.py
dataportal_api/dataportal/api/: api_natural_query.py  drug_endpoints.py  feedback_endpoints.py  fitness_correlation_endpoints.py  gene_endpoints.py  genome_endpoints.py  health_endpoints.py  metadata_endpoints.py  ppi_endpoints.py  proteomics_endpoints.py  router.py  species_endpoints.py  ttp_endpoints.py
dataportal_api/dataportal/api/core/: __init__.py  gene_endpoints.py  genome_endpoints.py  health_endpoints.py  metadata_endpoints.py  species_endpoints.py
dataportal_api/dataportal/api/experimental/: __init__.py  drug_endpoints.py  essentiality_endpoints.py  fitness_endpoints.py  mutant_growth_endpoints.py  proteomics_endpoints.py  reactions_endpoints.py
dataportal_api/dataportal/api/interactions/: __init__.py  fitness_correlation_endpoints.py  operon_endpoints.py  ortholog_endpoints.py  ppi_endpoints.py  ttp_endpoints.py
dataportal_api/dataportal/authentication/: __init__.py  auth.py  roles.py  utils.py
dataportal_api/dataportal/elasticsearch/: indexing.py  models.py
dataportal_api/dataportal/elasticsearch/mappings/: gene_mapping.json  species_mapping.json  strain_mapping.json
dataportal_api/dataportal/examples/: __init__.py  gene_examples.py  genome_examples.py  response_examples.py  species_examples.py
dataportal_api/dataportal/ingest/: constants.py  es_repo.py  utils.py
dataportal_api/dataportal/ingest/feature/: parsing.py  sources.py
dataportal_api/dataportal/ingest/gff/: parser.py
dataportal_api/dataportal/middleware/: __init__.py  middleware_classes.py  swagger_templates.py
dataportal_api/dataportal/migrations/: 0001_initial.py  0002_add_roles.py  0002_initial.py  0003_essentialitytag_label.py  0003_geneessentiality.py  0004_alter_strain_type_strain.py  0004_geneessentiality_essentiality_media_idx.py
dataportal_api/dataportal/models/: __init__.py  api_token.py  base.py  features.py  fitness_correlation.py  interactions.py  operons.py  orthologs.py  role.py  species.py  strains.py
dataportal_api/dataportal/schema/: base_schemas.py  drug_schemas.py  feedback_schemas.py  gene_schemas.py  genome_schemas.py  nl_schemas.py  ppi_schemas.py  response_schemas.py  species_schemas.py  ttp_schemas.py
dataportal_api/dataportal/services/: app_health_service.py  base_service.py  drug_service.py  essentiality_service.py  feedback_service.py  gene_faceted_search.py  gene_service.py  genome_service.py  nl_query_service.py  ppi_service.py  proteomics_service.py  service_factory.py  species_service.py  ttp_service.py
dataportal_api/dataportal/tests/: conftest.py  test_api.py  test_feedback_schemas.py  test_genome_service.py  test_response_formatting.py
dataportal_api/dataportal/unmanaged_models/: gene_data.py  strain_data.py
dataportal_api/dataportal/utils/: cog_categories.py  constants.py  decorators.py  errors.py  exceptions.py  response_wrappers.py  serialization.py  species_registry.py  string_client.py  utils.py
dataportal_api/dataportal/validation/: __init__.py  base_validator.py  species_validator.py
dataportal_api/pyhmmer_search/: api.py  apps.py  constants.py  models.py  run_integration_tests.py  run_pyhmmer_tests.py  schemas.py  tasks.py
dataportal_api/pyhmmer_search/management/: __init__.py
dataportal_api/pyhmmer_search/migrations/: 0001_initial.py  0002_pyhmmerdb.py  0003_hmmerjob_mx_alter_hmmerjob_threshold.py  0004_hmmerjob_e_hmmerjob_t_hmmerjob_dome_hmmerjob_domt_and_more.py  0005_hmmerjob_bias_filter_alter_hmmerjob_database.py  0006_alter_database_name.py  0007_update_database_names_to_full.py  0008_remove_bias_filter_field.py
dataportal_api/pyhmmer_search/results/: api.py  schemas.py
dataportal_api/pyhmmer_search/search/: api.py  apps.py  models.py  schemas.py  tasks.py  test_job_creation.py  test_tasks.py  utils.py
dataportal_api/pyhmmer_search/tests/: README.md  conftest.py  test_basic_functionality.py  test_integration_results.py  test_integration_search.py  test_integration_workflow.py
(+831 files in other folders)
